--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ p,
 li {
     font-size: 1.4rem;
     margin-bottom: 0.5em;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.1em;
 }
 
 h1,
@@ -58,7 +58,7 @@ h3 {
 }
 
 .md-heading {
-    font-size: 2.2rem;
+    font-size: 2rem;
     text-transform: uppercase;
 }
 
@@ -185,7 +185,7 @@ h3 {
 }
 
 .showcase .row {
-    height: 350px;
+    height: 340px;
     background: #fff;
     box-shadow: 0 0 20px 0 #ddd;
 }
@@ -222,7 +222,6 @@ h3 {
 
 .row .img-box img {
     display: inline-block;
-    height: 100%;
     width: 100%;
     object-fit: cover;
 }
@@ -419,7 +418,7 @@ h3 {
 .company-address {
     float: left;
     width: 49%;
-    height: 750px;
+    height: 760px;
     background-color: #fff;
     padding: 2rem;
     
@@ -428,7 +427,7 @@ h3 {
 .company-form {
     float: right;
     width: 48%;
-    height: 750px;
+    height: 760px;
     background-color: #fff;
     padding: 1rem;
 }
@@ -481,17 +480,181 @@ h3 {
 
 .company-form textarea{
     width: 100%;
-    height: 350px;
+    height: 320px;
+    padding: 1rem;
 }
 
 .form-btn{
-    text-align: center;
     display: block;
     padding: 0.5em 3em;
+    margin: 0 auto;
+    font-size: 1.6rem;
     letter-spacing: 0.1rem;
     background-color: #e63946;
+    text-transform: uppercase;
     color: #fff;
     font-weight: 500;
+    outline: none;
     border: none;
-    margin-left: 36%;
+    cursor: pointer;
+}
+
+
+/* ############################ Responsive styling #############     Media Query       ########################################## */
+
+@media screen and (max-width:500px){
+    :root{
+        font-size: 56.25%;
+    }
+
+    p, li{
+        font-size: 1.3rem;
+        padding: 0;
+    }
+
+    .header-content h1{
+        display: none;
+    }
+    
+    .navbar .logo,
+    .navbar .navbar-items{
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* showcase */
+
+    .row{
+        height: auto;
+        width: 100%;
+    }
+
+    .row .text-box{
+        float: none;
+        width: 100%;
+        text-align: center;
+        padding: 0.5rem;
+    }
+
+    .text-box h2{
+        font-size: 1.7rem;
+    }
+
+    .row .img-box{
+        float: none;
+        width: 100%;
+        height: 170px;
+    }
+
+    /* feature */
+
+    .features .box{
+        float: none;
+        width: 100%;
+    }
+
+    .features .box-2, .features .box-3{
+        margin-top: 5rem;
+    }
+
+    /* about banner */
+
+    .banner .banner-left,
+    .banner .banner-right{
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+
+
+    /* Contact Us */
+
+    .company-address, .company-form{
+        float: none;
+        display: block;
+        width: 100%;
+        height: auto;
+        margin-top: 5rem;
+    }
+
+
+
+}
+
+@media  screen and (min-width:501px) and (max-width:768px) {
+    :root{
+        font-size: 50%;
+    }
+    
+    .navbar .logo,
+    .navbar .navbar-items{
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* showcase */
+
+    .showcase .row{
+        height: auto;
+        width: 100%;
+    }
+
+    .row .text-box,
+    .row .img-box{
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .row .img-box{
+        height: 220px;
+    }
+
+    /* feature */
+
+    .features .box{
+        float: none;
+        width: 100%;
+    }
+
+    .features .box-2, .features .box-3{
+        margin-top: 5rem;
+    }
+
+    /* about banner */
+
+    .banner .banner-left,
+    .banner .banner-right{
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+
+
+    /* Contact Us */
+
+    .company-address, .company-form{
+        float: none;
+        display: block;
+        width: 100%;
+        height: auto;
+        margin-top: 5rem;
+    }
+
+
+}
+
+@media (orientation: landscape)  and (max-height:500px){
+    .header{
+        height: 90vmax;
+    }
+    
 }
